	PR debug/37726 	* gimplify.c (declare_vars): Use gimple_bind_block instead of 	gimple_block.

* gcc.dg/debug/dwarf2/pr37726.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140857 138bc75d-0d04-0410-961f-82ee72b054a4